# ExamTimetableScheduler

./: .gitignore  package-lock.json
backend/: CMakeLists.txt
backend/include/: algorithms.hpp  conflict_graph.hpp  csv_parser.hpp  models.hpp  room_allocator.hpp  scheduler.hpp  search_engine.hpp
backend/src/: conflict_graph.cpp  csv_parser.cpp  main.cpp  room_allocator.cpp  scheduler.cpp  search_engine.cpp
dummy_data/: courses.csv  courses_large.csv  enrollments.csv  enrollments_large.csv  generate_large_data.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
